Fix magnifier background color on Firefox in ticket home

--- a/packages/portal-style/src/modules/_search.scss
+++ b/packages/portal-style/src/modules/_search.scss
@@ -27,7 +27,6 @@
       border: none;
       height: 32px;
       left: 16px;
-      position: absolute;
       top: calc(50% - 16px);
       width: 32px;
       font-size: 26px;
