--- a/packages/portal-style/src/pages/_ticket-home.scss
+++ b/packages/portal-style/src/pages/_ticket-home.scss
@@ -179,6 +179,7 @@
     font-size: 20px;
     padding: 0;
     color: $brand-primary;
+    background-color: white;
   }
 }
 
